updated local_root={{ vsftpd_shares_root }}

--- a/templates/vsftpd.conf.j2
+++ b/templates/vsftpd.conf.j2
@@ -148,4 +148,4 @@ pam_service_name=vsftpd
 # This option specifies the location of the RSA key to use for SSL
 # encrypted connections.
 #rsa_private_key_file=
-local_root={ vsftpd_shares_root }}
+local_root={{ vsftpd_shares_root }}
